# Concept-A

./: .gitignore  README.md  concept_A.sln
.github/workflows/: ci.yml
Documentation/: Microsoft Media Foundation.docx
concept_A/: concept_A.sln
concept_A/Documentation/: GStreamer_Sources_Sinks_types.docx  Microsoft Media Foundation.docx  Qt_Build.docx  logicGetterLib.docx
concept_A/Documentation/UML/: GUI.dia  MediaFusionGCV_ClassDiagram.dia  class_diagram  class_diagram~
concept_A/GuiMediaFusion/: CMakeLists.txt  ControlClient.cpp  ControlClient.h  GuiMediaFusion.cpp  GuiMediaFusion.h  GuiMediaFusion.qrc  GuiMediaFusion.ui  GuiMediaFusion.vcxproj  GuiMediaFusion.vcxproj.filters  GuiMediaFusionController.cpp  GuiMediaFusionController.h  GuiMediaFusionModel.cpp  GuiMediaFusionModel.h  MainWindow.cpp  MainWindow.h  PreLaunchSettings.ui  StreamReceiver.cpp  StreamReceiver.h  comboboxes.h  darkMode.qss  errorStateGui.h  guiElements.h  lightMode.qss  main.cpp  resources.qrc
concept_A/GuiMediaFusion/core/: AppLog.cpp  AppLog.h  BackendService.cpp  BackendService.h  DeviceParser.cpp  DeviceParser.h  InferenceTypes.cpp  InferenceTypes.h  SystemMonitor.cpp  SystemMonitor.h
concept_A/GuiMediaFusion/dialogs/: DeviceManagerDialog.cpp  DeviceManagerDialog.h
concept_A/GuiMediaFusion/pages/: AnalyticsPage.cpp  AnalyticsPage.h  ComparePage.cpp  ComparePage.h  DashboardPage.cpp  DashboardPage.h  LogsPage.cpp  LogsPage.h  MultiGridPage.cpp  MultiGridPage.h  PipelinePage.cpp  PipelinePage.h  SettingsPage.cpp  SettingsPage.h
concept_A/GuiMediaFusion/theme/: Theme.cpp  Theme.h
concept_A/GuiMediaFusion/widgets/: Components.cpp  Components.h  Shell.cpp  Shell.h  VideoTile.cpp  VideoTile.h
concept_A/MFgetterLib/: MFgetterLib.cpp  MFgetterLib.h  MS_MediaFoundation.cpp  example.cpp  getterLib.vcxproj
concept_A/MediaFusionGCV/: AccelBackend.cpp  AccelBackend.h  AcceleratorRegistry.cpp  AcceleratorRegistry.h  Algorithm.h  Algorithms.cpp  Algorithms.h  CMakeLists.txt  Detector.cpp  Detector.h  DetectorConfig.h  FrameProcessor.cpp  FrameProcessor.h  GStreamerSink.cpp  GStreamerSink.h  GStreamerSinkApplication.cpp  GStreamerSinkApplication.h  GStreamerSinkScreen.cpp  GStreamerSinkScreen.h  GStreamerSource.cpp  GStreamerSource.h  GStreamerSourceCamera.cpp  GStreamerSourceCamera.h  InferenceBackend.cpp  InferenceBackend.h  InferenceBackendCuda.cpp  InferenceBackendNcnn.cpp  InferenceStats.h  MediaFusionGCV.vcxproj  MediaFusionGCV.vcxproj.filters  MediaFusionGCV_API.cpp  MediaFusionGCV_API.h  ModelRegistry.cpp  ModelRegistry.h  PipelineConfig.h  PipelineManager.cpp  PipelineManager.h  ScreenSinks.h  SinkType.h  SourceType.h  (+3 more)
concept_A/MediaFusionGCV/tests/: test_api_null_safety.cpp  test_device_enumeration.cpp  test_inference.cpp  test_main.cpp  test_pipeline_lifecycle.cpp
concept_A/getterLib/: MS_MediaFoundation.cpp  MS_MediaFoundation.h  e_ErrorState.h  getterLib.cpp  getterLib.h  getterLib.vcxproj  getterLib.vcxproj.filters
concept_A/gui/: gui.cpp  gui.h  gui.ui  gui.vcxproj  gui.vcxproj.filters  main.cpp
docs/: GUI_DESIGN.md
docs/stitch/: DESIGN_TOKENS.md  vision-os-dashboard.html  vision-os-device-manager.html  vision-os-multi-grid-analysis.html  vision-os-performance-analytics.html  vision-os-pipeline-editor.html  vision-os-settings.html  vision-os-stream-comparison.html
scripts/: build-ncnn.sh  build-opencv.sh  fetch-models.sh  fp16to32.py  onnx-to-ncnn.sh
singularity/prj_Win/: singularity.vcxproj  singularity.vcxproj.filters
singularity/sources/: VideoHandle.cpp  VideoHandle.h  enum_ErrorState.h  main.cpp  videoCapture.cpp  videoCapture.h
